--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.boraozdogan</groupId>
-	<artifactId>userpanel</artifactId>
+	<artifactId>kekikpanel</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>userpanel</name>
+	<name>kekikpanel</name>
 	<description>Simple panel application demonstration CRUD operations</description>
 	<properties>
 		<java.version>17</java.version>
