--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
+spring.server.servlet.session.tracking-models=cookie
+
 boz.app.name=KekikPanel
-boz.app.apiurl=http://localhost:8080/api
+boz.app.apiURL=http://localhost:8080/api
