--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.server.servlet.session.tracking-models=cookie
 
 boz.app.name=KekikPanel
 boz.app.apiURL=http://localhost:8080/api
+boz.app.callAPIOverHTTP=true
