--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.h2.console.enabled=true
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 spring.datasource.url=jdbc:h2:mem:panelDb;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
